src/patternfly/components/Accordion/accordion.scss
/* ... */
.#{$accordion}__item {
  position: relative;

  &::before { 
    position: absolute;
    inset: 0;
    pointer-events: none;
    content: "";
    background-color: var(--#{$accordion}__item--m-expanded--BackgroundColor);
    border-radius: var(--#{$accordion}__item--BorderRadius);
    opacity: var(--#{$accordion}__item--before--Opacity);
    transition-timing-function: var(--#{$accordion}__item--before--TransitionTimingFunction);
    transition-duration: var(--#{$accordion}__item--before--TransitionDuration--fade);
    transition-property: opacity;
  }

  &.pf-m-expanded {
    --#{$accordion}__toggle--PaddingBlockEnd: var(--#{$accordion}__toggle--m-expanded--PaddingBlockEnd);
    --#{$accordion}__toggle-text--FontWeight: var(--#{$accordion}__toggle--m-expanded__toggle-text--FontWeight);
    --#{$accordion}__item--before--TransitionDuration--slide: var(--#{$accordion}__item--before--TransitionDuration--expand--slide);
    --#{$accordion}__item--before--TransitionDuration--fade: var(--#{$accordion}__item--before--TransitionDuration--expand--fade);
    --#{$accordion}__item--before--Opacity: var(--#{$accordion}__item--m-expanded--before--Opacity);
    --#{$accordion}__item--before--TranslateY: var(--#{$accordion}__item--m-expanded--before--TranslateY);
    --#{$accordion}__expandable-content--TransitionDuration--slide: var(--#{$accordion}__expandable-content--TransitionDuration--expand--slide);
    --#{$accordion}__expandable-content--TransitionDuration--fade: var(--#{$accordion}__expandable-content--TransitionDuration--expand--fade);
    --#{$accordion}__expandable-content--Opacity: var(--#{$accordion}__item--m-expanded__expandable-content--Opacity);
    --#{$accordion}__expandable-content--TranslateY: var(--#{$accordion}__item--m-expanded__expandable-content--TranslateY);

    .#{$accordion}__toggle-icon {
      transform: rotate(var(--#{$accordion}__toggle--m-expanded__toggle-icon--Rotate));
    }
  }
}

.#{$accordion}__toggle {
  position: relative;
  z-index: var(--#{$accordion}__toggle--ZIndex);
  display: flex;
  column-gap: var(--#{$accordion}__toggle--ColumnGap);
  align-items: center;
  width: 100%;
  padding-block-start: var(--#{$accordion}__toggle--PaddingBlockStart);
  padding-block-end: var(--#{$accordion}__toggle--PaddingBlockEnd);
  padding-inline-start: var(--#{$accordion}__toggle--PaddingInlineStart);
  padding-inline-end: var(--#{$accordion}__toggle--PaddingInlineEnd);
  font-family: var(--#{$accordion}__toggle--FontFamily, inherit);
  font-size: var(--#{$accordion}__toggle--FontSize, inherit);
  text-align: start;
  background-color: var(--#{$accordion}__toggle--BackgroundColor);
  border: 0;
  border-radius: var(--#{$accordion}__toggle--BorderRadius);

  &:is(:hover, :focus) {
    --#{$accordion}__toggle--BackgroundColor: var(--#{$accordion}__toggle--hover--BackgroundColor);
  }
}

.#{$accordion}__toggle-text {
  @include pf-v6-text-overflow;

  flex-grow: 1;
  font-weight: var(--#{$accordion}__toggle-text--FontWeight);
  color: var(--#{$accordion}__toggle-text--Color);
}

.#{$accordion}__toggle-icon {
  @include pf-v6-mirror-inline-on-rtl;

  transition: var(--#{$accordion}__toggle-icon--Transition); // TODO remove shorthand property in breaking change
}

.#{$accordion}__expandable-content:where([hidden]) {
  display: revert;
}

.#{$accordion}__expandable-content {
  max-height: 0;
  margin-inline-start: var(--#{$accordion}__expandable-content--MarginInlineStart);
  margin-inline-end: var(--#{$accordion}__expandable-content--MarginInlineEnd);
  font-size: var(--#{$accordion}__expandable-content--FontSize);
  color: var(--#{$accordion}__expandable-content--Color);
  visibility: hidden;
  background-color: var(--#{$accordion}__expandable-content--BackgroundColor);
  border-radius: var(--#{$accordion}__expandable-content--BorderRadius);
  opacity: var(--#{$accordion}__expandable-content--Opacity);
  transition-delay: 0s, 0s, var(--#{$accordion}__expandable-content--TransitionDuration--fade), var(--#{$accordion}__expandable-content--TransitionDuration--fade), var(--#{$accordion}__expandable-content--TransitionDuration--fade);
  transition-timing-function: var(--#{$accordion}__expandable-content--TransitionTimingFunction);
  transition-duration: var(--#{$accordion}__expandable-content--TransitionDuration--fade), var(--#{$accordion}__expandable-content--TransitionDuration--slide), 0s, 0s, 0s;
  transition-property: opacity, translate, visibility, max-height, margin-block-end;
  translate: 0 var(--#{$accordion}__expandable-content--TranslateY);

  .#{$accordion}__item.pf-m-expanded & {
    max-height: 9999px;
    margin-block-end: var(--#{$accordion}__expandable-content--MarginBlockEnd);
    visibility: revert;
    transition-delay: 0s;

    &.pf-m-fixed {
      max-height: var(--#{$accordion}__expandable-content--m-fixed--MaxHeight);
      overflow-y: auto;
    }
  }
}

.#{$accordion}__expandable-content-body {
  padding-block-start: var(--#{$accordion}__expandable-content-body--PaddingBlockStart);
  padding-block-end: var(--#{$accordion}__expandable-content-body--PaddingBlockEnd);
  padding-inline-start: var(--#{$accordion}__expandable-content-body--PaddingInlineStart);
  padding-inline-end: var(--#{$accordion}__expandable-content-body--PaddingInlineEnd);

  & + & {
    --#{$accordion}__expandable-content-body--PaddingBlockStart: var(--#{$accordion}__expandable-content-body--expandable-content-body--PaddingBlockStart);
  }
}

